# ChangeLog for dev-python/pythondialog
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pythondialog/ChangeLog,v 1.21 2014/09/01 09:16:41 idella4 Exp $

*pythondialog-3.1.0 (01 Sep 2014)

  01 Sep 2014; Ian Delaney <idella4@gentoo.org> +pythondialog-3.1.0.ebuild,
  -pythondialog-2.7-r1.ebuild:
  bump; add py3.4 support, IUSE examples and its install, remove one old

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  pythondialog-2.7-r1.ebuild, pythondialog-2.7.ebuild,
  pythondialog-3.0.1.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*pythondialog-3.0.1 (28 Mar 2014)
*pythondialog-2.7-r1 (28 Mar 2014)

  28 Mar 2014; Ian Delaney <idella4@gentoo.org> +pythondialog-2.7-r1.ebuild,
  +pythondialog-3.0.1.ebuild:
  revbump, convert -> distutils-r1, bump, new version supports py3, fixes Bug
  #496524

  01 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pythondialog-2.7.ebuild:
  Fix dependencies. Set SUPPORT_PYTHON_ABIS.

  21 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  pythondialog-2.7.ebuild:
  Stable on ppc for the Gentoo Linux Installer.

  28 Jan 2006; Lukasz Strzygowski <lucass@gentoo.org>
  -files/00_all_setup.py.patch.bz2, -pythondialog-1.0.ebuild:
  Removed old version. Closed bug #120644.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> pythondialog-2.7.ebuild:
  Mark 2.7 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> pythondialog-2.7.ebuild:
  add ~ia64

  08 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  pythondialog-2.7.ebuild:
  Stable on sparc

  21 Jan 2005; Marcus D. Hanwell <cryos@gentoo.org> pythondialog-2.7.ebuild:
  Marked stable on amd64.

  04 Jan 2005; Bryan Østergaard <kloeri@gentoo.org>
  pythondialog-2.7.ebuild:
  Stable on x86 and alpha.

  31 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  14 Nov 2004; Bryan Østergaard <kloeri@gentoo.org>