@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST python3-pythondialog-3.0.1.tar.bz2 72645 SHA256 c06a5eab42c89d29e2d14471e376e68b0054e833934d8c8ba95efcb01086ba29 SHA512 c39a0c1746f612816905af47ff3c12fb293b7bd1cc732df00345bb918979c7a329e7b39536991c7920a7178f6febd9fe8b0d52b83f40eb38c62b2076e798d6ef WHIRLPOOL 3bc839d61c531cc1785f1eb84dc35915e338eae4876f2c1c3be8f901125a955786f7f4904be761ffe1fe4edd88d596bea839ce3f86ca4d75f73c53c99b605fce
 DIST python3-pythondialog-3.1.0.tar.bz2 81090 SHA256 8a39f5b2ec1703649487048205512c513408dd4339df0905d512e8085ca65c84 SHA512 4bc8b7a7f82150aa3e2dd2278454ce9deb8d1c11b3102aba06cad2cd5cee1ba734433b4a9c3bc7fdacfa7539b28c6f025fa7021b2ab38c44d6db9f665cdaea26 WHIRLPOOL 8bcf0812859185ea2b87434a9aeb8cf4afac94f0ae15b212dd47ad1fbe15b2cf5ddd476303367836954ba7e36b19cde7c757b211484060e4f55d23f145a8a129
+DIST python3-pythondialog-3.2.0.tar.bz2 1393316 SHA256 134077eb260ca590ffa586a001d132ec01ea59e9a5b463ebcef2a0c73d71c0a4 SHA512 90d438ee6e644152da5ad530b115013a9805e25336089a70f042a0a61c14340406985f64d19abec1f4dbe259ae485b6fcd11cadde2b5a018ad3edc42e5df6b28 WHIRLPOOL 8a6c49f0c977aefb3842bd2471f7f2561bb48a6b91ce77922798192a85cd30f06b4e28bbef60c9672768bdc84738b8ea42c8deaf8ff5dbdb61f8b9480cf01b2b
 DIST pythondialog-2.7.tar.bz2 29088 SHA256 5f7dbcbd28eebadc736d957b9511a87ad5570c8fc822c8123a42e7259773cb7f SHA512 41bee85f997a97915e8af14375703e515052581d64d75ff39ce09a04552574cce3ec9128bc9897fc89e40551727adbf4c0c16f9131ae16c635b45f7642a8e9da WHIRLPOOL 9601fcbdbb311306d0757de034261a1f4592909c203b0247519c83c09a5ba393181b5fc4385d5c73cd3a6630061296dbb7e1d3ea8565ae26a47cb28978cdc8f8
 EBUILD pythondialog-2.7.ebuild 765 SHA256 b37052011b3be57eeaef787c22ec7d998c5e922fee3f3b3e569a906c346d575e SHA512 f8495509d76355c3f3fb5c3d13bacf1ecba421607cdb4ee73d7d706ed7f2190f205fdcaa909a2a34d1778ec20c6caa10e68e484209134e2a2e0dbbfac7dd8efc WHIRLPOOL 3888e2386135e5b2bec50dfa27fcaa4a87fa9772a06cc44cd3b3d9e39bb368f34ec0e5502e958cd1b9a0994a46952b5c9067e2f7934f75a2dfbf7299bc485937
-EBUILD pythondialog-3.0.1.ebuild 627 SHA256 f1908886f938ad25da264e9ec4d14aa340bb55d8b851e9150291e455232f983f SHA512 6e12869aae53de9443a5bf89a84d60a53e2f842a9fa52f102d4270b0931a2dc49ee3e1351c0b1ee72921a7db3046055d813606031420fd6e19aa7d5c58cdc9f8 WHIRLPOOL a7eddafdeecce106910218d56ae31865e17b6b54d4ebc480c4062e214462a11979ffe47324b76369a0617be268f61fc22bfa7f298e3ab94bc70c2d98bb93fb51
 EBUILD pythondialog-3.1.0.ebuild 746 SHA256 935032f1674bed048f0a684b7fc47d1d9d634c43c01494fd527c0d913fcf46b8 SHA512 2833b26eabcd2f5e74d6472b9aff75981077db70c2cc33e8c7de46e0c22cec15871ddd9a0359dd501c5141618c014d7ea16294f7e9fe5ce3576ff3a84ab3c0c0 WHIRLPOOL 0e19c419d55a31fbbad8d1bc8b49caa52e8dfd4b8f94b2adaaa652f0fdc5134fdb774ad3a57a482f92c35ff02f97d2ae09c65ad89f51ce726690d6b83d65ab38
-MISC ChangeLog 2706 SHA256 65a361a6743dcbfd0276f38defeeb52c583842e14884856373b054ae870500bf SHA512 8e0d205cad1df92e833d5f75a08649db7425ef35e32e585f2cd1b6cb53e105d74d34c8bec48c1bc51de2cd838ea9439cb862768582e71b60d1c72b848aff14dd WHIRLPOOL de29b5719691345f3c772d9c9ea91393ad9b71322a36f4ae3d78e0e4ebba09bd4d3160d1fd67060865b90eaccbb760fc23561b196b3e25046edc0b0cca60a30a
+EBUILD pythondialog-3.2.0.ebuild 742 SHA256 fb23d30a89f86265406de1f318d4213bf21cab86d42f356407087f97cb9cf711 SHA512 bf2d54d342c070d6c600f3fb4f77fe825f6e678e28912e21ecaccdca6747b72f977f572116f74758c1cfa7d44e8775542536aedf71efc5b59138d7d8352ea527 WHIRLPOOL 7f240cbb7fea993d9cbd7bd650e1fd9ebb46cffb82ab2b195d7beb1efe49df70f3d61b9331a5c517a72554994a99b7fe6eb5d0a5e91d26294d72820dd9497c72
+MISC ChangeLog 2863 SHA256 4c793fb2f6410080aef7221960001eb3a9d89a98171270296720836b7eae753c SHA512 491c9f9f6fa80266326c2a3b9999e2b717d9d0d5be4a81caf80c12a1c9f159a39828a83d71539bf9988f0bfb981d28baf737e3afa8e55f6911658b3fa90afc69 WHIRLPOOL ac55ec81c7d6a4c72e179b58b25abc72c5387c01f63fc2d6d639a72748687121f9f5d3cf045cbdac8485f2705cca58d95d2d39169548c04b00ab268cf95680a2
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlQEN1YACgkQso7CE7gHKw2yMQCgtWsL34E1OlsZyOyxwlerlpVT
-GycAnReUOGzcZavwgz0+HgCRmXT7TJE6
-=5iOD
+iEYEAREIAAYFAlRM5SIACgkQso7CE7gHKw1t6QCgs5qW0CgDpCK9NEN9HYrFeRPD
+UBAAoJu4SslNtABX1OMEOEp2ECozrV7F
+=WODY
 -----END PGP SIGNATURE-----
