@@ -1,9 +1,9 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pythondialog/pythondialog-3.0.1.ebuild,v 1.2 2014/08/10 21:20:11 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pythondialog/pythondialog-3.2.0.ebuild,v 1.1 2014/10/26 12:12:01 idella4 Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{3_2,3_3} )
+PYTHON_COMPAT=( python{3_3,3_4} )
 
 inherit distutils-r1
 
@@ -14,7 +14,12 @@ SRC_URI="mirror://sourceforge/pythondialog//${PV}/python3-${P}.tar.bz2"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
-IUSE=""
+IUSE="examples"
 
 DEPEND="dev-util/dialog"
 RDEPEND="${DEPEND}"
+
+python_install_all() {
+	use examples && local EXAMPLES=( examples/. )
+	distutils-r1_python_install_all
+}
