@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pythondialog
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pythondialog/ChangeLog,v 1.21 2014/09/01 09:16:41 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pythondialog/ChangeLog,v 1.22 2014/10/26 12:12:01 idella4 Exp $
+
+*pythondialog-3.2.0 (26 Oct 2014)
+
+  26 Oct 2014; Ian Delaney <idella4@gentoo.org> +pythondialog-3.2.0.ebuild,
+  -pythondialog-3.0.1.ebuild:
+  bump; rm old
 
 *pythondialog-3.1.0 (01 Sep 2014)
 
